# o3storage

./: .gitignore  ARM_DEPLOYMENT_GUIDE.md  CLUSTER_MANAGEMENT.md  Cargo.toml  LICENSE  OPERATING_MANUAL.md  README.md  TEST_RESULTS.md  hello_again_test.rs  hello_world_test.rs  read_file_test.rs  standalone_test.rs  three_node_test.rs  version_check_test.rs  versioned_storage.rs
api/: Cargo.toml
api/src/: auth.rs  error.rs  handlers.rs  lib.rs  server.rs  xml.rs
consensus/: Cargo.toml
consensus/src/: lib.rs  manager.rs  messages.rs  raft.rs
network/: Cargo.toml
network/src/: communication.rs  discovery.rs  lib.rs  manager.rs
os/: Cargo.toml  README.md  build.rs  x86_64-o3storage.json
os/.cargo/: config.toml
os/src/: allocator.rs  crypto.rs  filesystem.rs  gdt.rs  interrupts.rs  keyboard.rs  main.rs  memory.rs  network.rs  scheduler.rs  serial.rs  storage.rs  vga_buffer.rs
scripts/: build-iso.sh
src/: config.rs  error.rs  lib.rs  main.rs  node.rs
storage/: Cargo.toml
storage/src/: engine.rs  lib.rs  metadata.rs  object.rs  versioning.rs
system/: Cargo.toml
system/src/: lib.rs
tests/: Cargo.toml  README.md  basic_test.rs  distributed_operations_test.rs  simple_distributed_test.rs
tests/src/: cluster_test.rs
