[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
openssl = { version = "0.10", features = ["vendored"] }
sha2 = "0.10"
consensus = { path = "../consensus" }
storage = { path = "../storage" }