[package]
name = "consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
bytes = { version = "1.0", features = ["serde"] }