[package]
name = "o3storage-os"
version = "0.1.0"
edition = "2021"
authors = ["O3Storage Team"]
description = "O3StorageOS - Custom Rust OS for Maximum Security Storage System"

# Phase 4: Absolute minimal dependencies - Zero external software stack
[dependencies]
# ONLY essential OS components - no network/crypto/storage libraries
spin = { version = "0.9", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false }

# Hardware abstraction only - no high-level abstractions
volatile = { version = "0.6", default-features = false }
x86_64 = { version = "0.15", default-features = false }

# Bootloader for initial system setup only
bootloader_api = { version = "0.11", default-features = false }

[dependencies.bootloader]
version = "0.11"
default-features = false
features = ["map_physical_memory"]

# Ultra-secure build configuration
[profile.dev]
panic = "abort"
opt-level = "s"
debug = false
strip = true

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"
debug = false
strip = true
overflow-checks = true

[[bin]]
name = "o3storage-os"
test = false
bench = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300

# Compile-time security features
[features]
default = []
security-audit = []