[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
blake3 = "1.5"
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["fs", "io-util"] }
crossbeam = "0.8"
tracing = "0.1"
bincode = "1.3"

# Parquet dependencies for stable file storage
arrow = "53.0"
parquet = "53.0"
datafusion = "43.0"