[package]
name = "system"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"